# attention

./: .gitignore  README.md  attention.py  pyproject.toml  requirements.txt  test_compare.py  utils.py
.github/workflows/: python-app.yml
src/: act.py  annotate.py  attention.py  base.py  conv.py  example.ipynb  log_utils.py  loss.py  states.py  t5.py  test_compare.py  test_utils.py  testing_utils.py  transformer.py  utils.py  viz.py
src/examples/: attention.ipynb  attention_mask.ipynb  attention_scaling.ipynb  example_attention.ipynb  example_attention_mask.ipynb  example_dense.ipynb  gpt2_generation.ipynb  gpt2_generation.py  sandbox.ipynb  seq2seq_transformer.ipynb  t5_generation.ipynb  tests.ipynb  token_prob_viz.ipynb  train.ipynb
src/models/: gpt2.py  t5.py  wav2vec2.py
src/tests/: __init__.py  test_act.py  test_attention.py  test_compare.py  test_conv.py  test_gpt2.py  test_grad.py  test_jit.py  test_t5.py  test_transformer.py  test_utils.py  test_wav2vec2.py
