[tool.poetry]
name = "attention"
version = "0.1.0"
description = ""
authors = ["LukasGardberg <\u001alukasgardberg2@gmail.com\u001a>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.23"
jaxlib = "^0.4.23"
matplotlib = "^3.8.2"
torch = "^2.1.2"
pytest = "^7.4.4"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
imageio = "^2.33.1"
tiktoken = "^0.5.2"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
addopts = "-ra -q"
testpaths = [
    "src/tests",
]