[tool.poetry]
name = "attention"
version = "0.1.0"
description = ""
authors = ["LukasGardberg <\u001alukasgardberg2@gmail.com\u001a>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.23"
jaxlib = "^0.4.23"
matplotlib = "^3.8.2"
torch = "^2.1.2"
pytest = "^7.4.4"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
imageio = "^2.33.1"
tiktoken = "^0.5.2"
black = "^23.12.1"
torchtext = "^0.17.2"
transformers = "^4.39.3"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
]
minversion = "6.0"
testpaths = [
    "src/tests",
]
markers = [
    "paramtest: compares number of parameters"
]

[tool.pyright]
# Removes warning for Array["size_A, size_B"] type hinting
reportInvalidTypeForm = false
