[project]
name = "attention"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "imageio>=2.36.0",
    "jax>=0.4.35",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.3.3",
    "scikit-learn>=1.5.2",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.8.0",
    "torch>=2.5.0",
    "torchtext>=0.18.0",
    "tqdm>=4.66.5",
    "transformers>=4.46.0",
]

[tool.pytest.ini_options]
# temporarily ignore failing t5 tests
addopts = "-p no:warnings --ignore=src/tests/test_t5.py"

ilterwarnings = [
    "ignore::UserWarning",
]
minversion = "6.0"
testpaths = [
    "src/tests",
]
markers = [
    "paramtest: compares number of parameters"
]
[tool.pyright]
# Removes warning for Array["size_A, size_B"] type hinting
reportInvalidTypeForm = false
typeCheckingMode = "off"